src/lowering/snapshots/rusty__lowering__calls__tests__call_statements_in_initializers_not_changed.snap
---
source: src/lowering/calls.rs
expression: "units[0].0.implementations[0]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        Assignment {
            left: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "b",
                    },
                ),
                base: None,
            },
            right: CallStatement {
                operator: ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "ADR",
                        },
                    ),
                    base: None,
                },
                parameters: Some(
                    ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                ),
            },
        },
        ReferenceAssignment {
            left: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "c",
                    },
                ),
                base: None,
            },
            right: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "b",
                    },
                ),
                base: None,
            },
        },
    ],
    location: SourceLocation {
        span: Range(
            TextLocation {
                line: 8,
                column: 8,
                offset: 212,
            }..TextLocation {
                line: 7,
                column: 15,
                offset: 203,
            },
        ),
        file: Some(
            "<internal>",
        ),
    },
    name_location: SourceLocation {
        span: Range(
            TextLocation {
                line: 1,
                column: 17,
                offset: 18,
            }..TextLocation {
                line: 1,
                column: 21,
                offset: 22,
            },
        ),
        file: Some(
            "<internal>",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
