src/lowering/snapshots/rusty__lowering__calls__tests__complex_call_statement_in_assignment_method.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[2]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        ExpressionList {
            expressions: [
                Allocation {
                    name: "__complexMethod0",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "complexMethod",
                            },
                        ),
                        base: Some(
                            ReferenceExpr {
                                kind: Member(
                                    Identifier {
                                        name: "myFb",
                                    },
                                ),
                                base: None,
                            },
                        ),
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "__complexMethod0",
                                        },
                                    ),
                                    base: None,
                                },
                            ],
                        },
                    ),
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                    right: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "__complexMethod0",
                            },
                        ),
                        base: None,
                    },
                },
            ],
        },
    ],
    overriding: false,
    generic: false,
    access: None,
}
