src/lowering/snapshots/rusty__lowering__calls__tests__complex_call_statement_in_body.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[1]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        ExpressionList {
            expressions: [
                Allocation {
                    name: "__complexFunc0",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "complexFunc",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "__complexFunc0",
                                        },
                                    ),
                                    base: None,
                                },
                            ],
                        },
                    ),
                },
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "__complexFunc0",
                        },
                    ),
                    base: None,
                },
            ],
        },
    ],
    location: SourceLocation {
        span: Range(
            TextLocation {
                line: 13,
                column: 12,
                offset: 331,
            }..TextLocation {
                line: 13,
                column: 26,
                offset: 345,
            },
        ),
        file: Some(
            "<internal>",
        ),
    },
    name_location: SourceLocation {
        span: Range(
            TextLocation {
                line: 8,
                column: 17,
                offset: 160,
            }..TextLocation {
                line: 8,
                column: 21,
                offset: 164,
            },
        ),
        file: Some(
            "<internal>",
        ),
    },
    end_location: SourceLocation {
        span: Range(
            TextLocation {
                line: 14,
                column: 8,
                offset: 354,
            }..TextLocation {
                line: 14,
                column: 20,
                offset: 366,
            },
        ),
        file: Some(
            "<internal>",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
