src/lowering/snapshots/rusty__lowering__calls__tests__complex_call_statement_in_call_with_implicit_parameter.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[1]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        ExpressionList {
            expressions: [
                Allocation {
                    name: "__complexFunc0",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "complexFunc",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "__complexFunc0",
                                        },
                                    ),
                                    base: None,
                                },
                                ReferenceExpr {
                                    kind: Member(
                                        Identifier {
                                            name: "b",
                                        },
                                    ),
                                    base: None,
                                },
                            ],
                        },
                    ),
                },
                Allocation {
                    name: "__complexFunc1",
                    reference_type: "STRING",
                },
                CallStatement {
                    operator: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "complexFunc",
                            },
                        ),
                        base: None,
                    },
                    parameters: Some(
                        ExpressionList {
                            expressions: [
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "complexFunc",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "__complexFunc1",
                                            },
                                        ),
                                        base: None,
                                    },
                                },
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "x",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "__complexFunc0",
                                            },
                                        ),
                                        base: None,
                                    },
                                },
                            ],
                        },
                    ),
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "a",
                            },
                        ),
                        base: None,
                    },
                    right: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "__complexFunc1",
                            },
                        ),
                        base: None,
                    },
                },
            ],
        },
    ],
    overriding: false,
    generic: false,
    access: None,
}
