src/lowering/snapshots/rusty__lowering__calls__tests__complex_call_statement_in_elif_condition.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[1]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        IfStatement {
            blocks: [
                ConditionalBlock {
                    condition: LiteralBool {
                        value: true,
                    },
                    body: [],
                },
            ],
            else_block: [
                ExpressionList {
                    expressions: [
                        Allocation {
                            name: "__complexFunc0",
                            reference_type: "STRING",
                        },
                        CallStatement {
                            operator: ReferenceExpr {
                                kind: Member(
                                    Identifier {
                                        name: "complexFunc",
                                    },
                                ),
                                base: None,
                            },
                            parameters: Some(
                                ExpressionList {
                                    expressions: [
                                        ReferenceExpr {
                                            kind: Member(
                                                Identifier {
                                                    name: "__complexFunc0",
                                                },
                                            ),
                                            base: None,
                                        },
                                    ],
                                },
                            ),
                        },
                        IfStatement {
                            blocks: [
                                ConditionalBlock {
                                    condition: BinaryExpression {
                                        operator: Equal,
                                        left: ReferenceExpr {
                                            kind: Member(
                                                Identifier {
                                                    name: "__complexFunc0",
                                                },
                                            ),
                                            base: None,
                                        },
                                        right: LiteralString {
                                            value: "hello",
                                            is_wide: false,
                                        },
                                    },
                                    body: [],
                                },
                            ],
                            else_block: [],
                        },
                    ],
                },
            ],
        },
    ],
    location: SourceLocation {
        span: Range(7:8 - 11:14),
        file: Some(
            "<internal>",
        ),
    },
    name_location: SourceLocation {
        span: Range(5:17 - 5:21),
        file: Some(
            "<internal>",
        ),
    },
    end_location: SourceLocation {
        span: Range(13:8 - 13:20),
        file: Some(
            "<internal>",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
