src/lowering/snapshots/rusty__lowering__calls__tests__complex_call_statement_in_if_statement_body.snap
---
source: src/lowering/calls.rs
expression: "unit.implementations[1]"
---
Implementation {
    name: "main",
    type_name: "main",
    linkage: Internal,
    pou_type: Function,
    statements: [
        IfStatement {
            blocks: [
                ConditionalBlock {
                    condition: LiteralBool {
                        value: true,
                    },
                    body: [
                        ExpressionList {
                            expressions: [
                                Allocation {
                                    name: "__complexFunc0",
                                    reference_type: "STRING",
                                },
                                CallStatement {
                                    operator: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "complexFunc",
                                            },
                                        ),
                                        base: None,
                                    },
                                    parameters: Some(
                                        ExpressionList {
                                            expressions: [
                                                ReferenceExpr {
                                                    kind: Member(
                                                        Identifier {
                                                            name: "__complexFunc0",
                                                        },
                                                    ),
                                                    base: None,
                                                },
                                            ],
                                        },
                                    ),
                                },
                                Assignment {
                                    left: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "a",
                                            },
                                        ),
                                        base: None,
                                    },
                                    right: ReferenceExpr {
                                        kind: Member(
                                            Identifier {
                                                name: "__complexFunc0",
                                            },
                                        ),
                                        base: None,
                                    },
                                },
                            ],
                        },
                    ],
                },
            ],
            else_block: [],
        },
    ],
    overriding: false,
    generic: false,
    access: None,
}
